Add latest works

--- a/index.html
+++ b/index.html
@@ -141,6 +141,32 @@
             </a>
         </article>
     </section>
+
+    <div class="latest-works-wrapper">
+        <section class="latest-works-container content-block centered-content">
+            <img src="images/pointer-icon.svg" alt="pointer-icon" class="latest-works-icon">
+            <h1 class="latest-works-title">latest works</h1>
+
+            <a class="latest-works-navigation-icon next-arrow-icon float-right">
+            </a>
+
+            <a class="latest-works-navigation-icon prev-arrow-icon float-right">
+            </a>
+
+            <div class="clearfix"></div>
+
+            <section class="latest-works-samples">
+                <img src="images/task.png" alt="task" class="latest-works-sample">
+            
+                <img src="images/lemon.png" alt="task" class="latest-works-sample">
+
+                <img src="images/geometry.png" alt="task" class="latest-works-sample">
+
+                <img src="images/red.png" alt="task" class="latest-works-sample">
+            </section>
+        </section>
+    </div>
+
 </body>
 
 </html>
