Add clients section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <section class="latest-works-samples">
                 <img src="images/task.png" alt="task" class="latest-works-sample">
-            
+
                 <img src="images/lemon.png" alt="task" class="latest-works-sample">
 
                 <img src="images/geometry.png" alt="task" class="latest-works-sample">
@@ -167,6 +167,63 @@
         </section>
     </div>
 
+    <div class="clients-wrapper">
+        <div class="clients-container content-block centered-content">
+            <section class="testimonials-container float-left">
+                <img src="images/comments.svg" alt="comments" class="clients-title-icon testimonials-icon">
+
+                <h1 class="clients-title">
+                    testimonials
+                </h1>
+
+                <p class="testimonials-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut nulla sapien, at aliquam erat.
+                    Sed vitae massa tellus. Aliquam commodo aliquam metus, sed iaculis nibh tempus id. Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus
+                    et ultrices posuere cubilia Curae; Etiam nec nisi in nisl euismod fringilla.
+                </p>
+
+                <small class="testimonials-author">
+                    John Travis, CEO, DomainName.com
+                </small>
+            </section>
+
+            <section class="customers-container content-block float-right">
+                <img src="images/clients.svg" alt="clients" class="clients-title-icon clients-icon">
+
+                <h1 class="clients-title">
+                    our clients
+                </h1>
+
+                <div class="clients-logos-container">
+                    <div class="client-logo-wrapper">
+                        <img src="images/Cox-communication.png" alt="cox communication">                        
+                    </div>
+
+                    <div class="client-logo-wrapper">
+                        <img src="images/Cnn.png" alt="cnn">                        
+                    </div>
+
+                    <div class="client-logo-wrapper">
+                        <img src="images/Apartment-finder.png" alt="apartment finder">                    
+                    </div>
+
+                    <div class="client-logo-wrapper">
+                        <img src="images/John-deere.png" alt="john deere">
+                    </div>
+
+                    <div class="client-logo-wrapper">
+                        <img src="images/Banana-boat.png" alt="banana boat">
+                    </div>
+                    <div class="client-logo-wrapper">
+                        <img src="images/Fujifilm.png" alt="fujifilm">
+                    </div>
+                </div>
+            </section>
+
+            <div class="clearfix"></div>
+        </div>
+    </div>
 </body>
 
 </html>
