--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
 
                 <div class="clients-logos-container">
                     <div class="client-logo-wrapper">
-                        <img src="images/Cox-communication.png" alt="cox communication">                        
+                        <img src="images/Cox-communication.png" alt="cox communication">
                     </div>
 
                     <div class="client-logo-wrapper">
-                        <img src="images/Cnn.png" alt="cnn">                        
+                        <img src="images/Cnn.png" alt="cnn">
                     </div>
 
                     <div class="client-logo-wrapper">
-                        <img src="images/Apartment-finder.png" alt="apartment finder">                    
+                        <img src="images/Apartment-finder.png" alt="apartment finder">
                     </div>
 
                     <div class="client-logo-wrapper">
@@ -224,6 +224,133 @@
             <div class="clearfix"></div>
         </div>
     </div>
+
+    <section class="call-to-action content-block centered-content">
+        <p class="call-to-action-description">
+            This is a clean and modern, four column website PSD template.
+            You can code it into a Wordpress website, HTML5 responsive website for your personal or client works.
+            So ahead and download this wonderful PSD template!
+        </p>
+
+        <a class="call-to-action-download" href="#">
+            <img src="images/download.svg" alt="download" class="call-to-action-icon">
+            download psd
+        </a>
+
+        <div class="clearfix"></div>
+    </section>
+
+    <footer class="footer-content ">
+        <div class="footer-content-containers content-block centered-content">
+            <section class="about-container">
+                <h1 class="about-title">
+                    ABOUT US
+                </h1>
+
+                <p class="about-description">
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Morbi
+                    euismod placerat dui et tincidunt. Sed
+                    sollicitudin posuere auctor. Phasellus
+                    at ultricies nisl. Integer at leo eros. Ut
+                    nec lorem id orci convallis porta.
+                    Donec pharetra neque eu velit dictum
+                    molestie
+                </p>
+            </section>
+
+            <section class="about-container">
+                <h1 class="about-title">
+                    EXPLORE
+                </h1>
+
+                <nav class="footer-navigation-container">
+                    <a href="#">Home</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Services</a>
+                    <a href="#">Portfolio</a>
+                    <a href="#">Blog</a>
+                </nav>
+
+            </section>
+
+            <section class="about-container">
+                <h1 class="about-title">
+                    BROWSE
+                </h1>
+
+                <nav class="footer-navigation-container">
+                    <a href="#">Careers</a>
+                    <a href="#">Press & Media</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Service</a>
+                    <a href="#">Privacy Policy</a>
+                </nav>
+            </section>
+
+            <section class="about-container">
+                <h1 class="about-title">
+                    CONTACT US
+                </h1>
+
+                <p class="contact-us-container">
+                    <span class="bold">BisLite Inc.</span>
+                    <span>Always Street 265</span>
+                    <span> 0X - 125 - Canada</span>
+
+                    <br />
+
+                    <span>Phone: 987-6543-210</span>
+                    <span>Fax: 987-6543-210</span>
+                </p>
+            </section>
+
+            <section class="about-container social-media-links">
+                <h1 class="about-title">
+                    CONNECT WITH US
+                </h1>
+
+                <a href="#">
+                    <img src="images/facebook.png" alt="facebook">
+                </a>
+
+                <a href="#">
+                    <img src="images/dribbble.png" alt="facebook">
+                </a>
+
+                <a href="#">
+                    <img src="images/pinterest.png" alt="facebook">
+                </a>
+
+                <div class="clearfix social-media-links-separator"></div>
+
+                <a href="#">
+                    <img src="images/linkedin.png" alt="facebook">
+                </a>
+
+                <a href="#">
+                    <img src="images/skype.png" alt="facebook">
+                </a>
+
+                <a href="#">
+                    <img src="images/share.png" alt="facebook">
+                </a>
+
+                <div class="clearfix"></div>
+            </section>
+
+            <section class="footer-copyright">
+                <small class="footer-copyright-text">
+                    &copy; Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com. 
+                    Client Logos are copyright and trademark of the respective owners / companies. 
+                </small>
+
+                <img src="images/BisLite-logo.png" alt="logo" class="footer-logo">
+
+                <div class="clearfix"></div>
+            </section>
+        </div>
+    </footer>
 </body>
 
 </html>
