Implement drop down menu

--- a/index.html
+++ b/index.html
@@ -16,28 +16,35 @@
             <img src="images/BisLite-logo.png" alt="BisLite-logo" class="header-content-logo">
 
             <nav class="header-content-menu">
-                <a href="#">home</a>
-                <a href="#">about us</a>
-                <a href="#" class="header-dropdown-menu-item">services
-                    <!-- <div class="header-dropdown-submenu">
-                        <a href="#">Web Design</a>
-                        <a href="#">Wordpress Design</a>
-                        <a href="#">Mobile App Development</a>
-                        <a href="#">Internet Marketing</a>
-                        <a href="#">Social Media Management</a>
-                    </div> -->
-                </a>
-                <a href="#" class="header-dropdown-menu-item">portfolio
-                    <!-- <div class="header-dropdown-submenu">
-                        <a href="#">Web Design</a>
-                        <a href="#">Wordpress Design</a>
-                        <a href="#">Mobile App Development</a>
-                        <a href="#">Internet Marketing</a>
-                        <a href="#">Social Media Management</a>
-                    </div> -->
-                </a>
-                <a href="#">blog</a>
-                <a href="#">contact us</a>
+                <ul>
+                    <li><a href="#" class="header-dropdown-menu-link">home</a></li>
+                    <li><a href="#" class="header-dropdown-menu-link">about us</a></li>
+
+                    <li class="header-dropdown-menu-item">
+                        <a href="#" class="header-dropdown-menu-link">services</a>
+                        <div class="header-dropdown-submenu">
+                            <a href="#" class="header-dropdown-sublink">Web Design</a>
+                            <a href="#" class="header-dropdown-sublink">Wordpress Design</a>
+                            <a href="#" class="header-dropdown-sublink">Mobile App Development</a>
+                            <a href="#" class="header-dropdown-sublink">Internet Marketing</a>
+                            <a href="#" class="header-dropdown-sublink">Social Media Management</a>
+                        </div>
+                    </li>
+
+                    <li class="header-dropdown-menu-item">
+                        <a href="#" class="header-dropdown-menu-link">portfolio</a>
+                        <div class="header-dropdown-submenu">
+                            <a href="#" class="header-dropdown-sublink">Web Design</a>
+                            <a href="#" class="header-dropdown-sublink">Wordpress Design</a>
+                            <a href="#" class="header-dropdown-sublink">Mobile App Development</a>
+                            <a href="#" class="header-dropdown-sublink">Internet Marketing</a>
+                            <a href="#" class="header-dropdown-sublink">Social Media Management</a>
+                        </div>
+                    </li>
+
+                    <li><a href="#" class="header-dropdown-menu-link">blog</a></li>
+                    <li><a href="#" class="header-dropdown-menu-link">contact us</a></li>
+                </ul>
             </nav>
 
             <div class="clearfix"></div>
@@ -156,13 +163,62 @@
             <div class="clearfix"></div>
 
             <section class="latest-works-samples">
-                <img src="images/task.png" alt="task" class="latest-works-sample">
 
-                <img src="images/lemon.png" alt="task" class="latest-works-sample">
+                <div class="latest-works-sample">
+                    <img src="images/task.png" alt="task" class="latest-works-sample" />
 
-                <img src="images/geometry.png" alt="task" class="latest-works-sample">
+                    <section class="latest-works-sample-reveal">
+                        <a href="#">
+                            <img src="images/eye-hover.png" alt="view">
+                        </a>
 
-                <img src="images/red.png" alt="task" class="latest-works-sample">
+                        <a href="#">
+                            <img src="images/link-hover.png" alt="share">
+                        </a>
+                    </section>
+                </div>
+
+                <div class="latest-works-sample">
+                    <img src="images/lemon.png" alt="lemon" class="latest-works-sample">
+
+                    <section class="latest-works-sample-reveal">
+                        <a href="#">
+                            <img src="images/eye-hover.png" alt="view">
+                        </a>
+
+                        <a href="#">
+                            <img src="images/link-hover.png" alt="share">
+                        </a>
+                    </section>
+                </div>
+
+                <div class="latest-works-sample">
+                    <img src="images/geometry.png" alt="geometry" class="latest-works-sample">
+
+                    <section class="latest-works-sample-reveal">
+                        <a href="#">
+                            <img src="images/eye-hover.png" alt="view">
+                        </a>
+
+                        <a href="#">
+                            <img src="images/link-hover.png" alt="share">
+                        </a>
+                    </section>
+                </div>
+
+                <div class="latest-works-sample">
+                    <img src="images/red.png" alt="red" class="latest-works-sample">
+
+                    <section class="latest-works-sample-reveal">
+                        <a href="#">
+                            <img src="images/eye-hover.png" alt="view">
+                        </a>
+
+                        <a href="#">
+                            <img src="images/link-hover.png" alt="share">
+                        </a>
+                    </section>
+                </div>
             </section>
         </section>
     </div>
@@ -341,8 +397,9 @@
 
             <section class="footer-copyright">
                 <small class="footer-copyright-text">
-                    &copy; Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by Brankic1979.com. 
-                    Client Logos are copyright and trademark of the respective owners / companies. 
+                    &copy; Copyright 2012 - BisLite Inc. All rights reserved. Some free icons used here are created by
+                    Brankic1979.com.
+                    Client Logos are copyright and trademark of the respective owners / companies.
                 </small>
 
                 <img src="images/BisLite-logo.png" alt="logo" class="footer-logo">
